Fixed alignment and opcaity issue solved

--- a/portfolio2021/src/App.css
+++ b/portfolio2021/src/App.css
@@ -119,7 +119,7 @@ header .scrolldown a:hover {
   top: 0;
   display: block;
   transition: top 0.8s;
-  justify-content: center;
+  margin-left: 50px;
 }
 .opaque {
   background-color: #333;
@@ -150,10 +150,10 @@ ul#nav li a {
   /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
 
   display: inline-block;
-  padding: 8px 13px;
+  padding: 10px 13px;
   line-height: 32px;
   text-decoration: none;
-  text-align: left;
+  text-align: center;
   color: #f06000;
 
   -webkit-transition: color 0.2s ease-in-out;
@@ -182,6 +182,7 @@ ul#nav li.current a {
   padding-right: 65px;
   font-size: 30px;
   color: #d5d6d6;
+  margin-left: 18px;
 }
 .social i:hover {
   color: #e41717;
